modified README and CHANGELOG to reflect changes related to engines migration

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,1 +1,2 @@
+2008-08-24: Upgraded to engines compatible mephisto (http://github.com/technoweenie/mephisto/commit/e9fc1471b8f368184b9197dd1d37599a4efa4c22)
 2007-09-24: Put together README and exposed the plugin to the public [carter]
